--- a/templates/update.html
+++ b/templates/update.html
@@ -3,15 +3,15 @@
 {% block body  %}
   <div class="container ">
     <h2>Update Todo</h2>
-    <form action="/" method="POST">
+    <form action="/update/{{todo.sno}}" method="POST">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Todo title</label>
-        <input type="text" class="form-control" name="title" id="text" aria-describedby="emailHelp">
+        <input type="text" class="form-control" name="title" id="text" value="{{todo.title}}" aria-describedby="emailHelp">
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Todo Discription</label>
-        <input type="text" class="form-control" name="desc" id="text">
+        <input type="text" class="form-control" value="{{todo.desc}}" name="desc" id="text">
       </div>
       <button type="submit" class="btn btn-success">Submit</button>
     </form>
